public/css/styles.css
@import url('https://fonts.googleapis.com/css?family=Limelight|Righteous');
@import url('https://fonts.googleapis.com/css?family=Montserrat|Niramit|Quicksand|Raleway');

.icon-block {
  padding: 0 15px;
}

p{
  font-family: 'Quicksand', sans-serif;
}

.icon-block .material-icons {
  font-size: inherit;
}

body {
  background-color: rgba(0, 0, 0, .9);
}

nav {
  box-shadow: 0 4px rgb(255, 255, 255);
}

.brand-logo{
  font-family: 'Limelight', cursive;
}

.header {
  color: #f7ee8b;
}

.index-club-cards{
  margin-bottom: 2%;
}

.title {
  font-family: 'Limelight', cursive;
  color: #ebbb4a;
}

.post-area{
  background-color: #d1d2d4;
}

.discussion{
  text-align: center;
  margin-top: 5%;
}

.discussion_con{
margin-top: 3%;
align-content: center;
}

.ind_discussion{
  text-align: center;
}

.post{
  background-color:  rgba(236, 184, 62, 0.685);
  box-shadow: inset #d1d2d4 0.5px 0.5px 20px 0px;
}



::placeholder { 
  opacity: 0.5;
}

input[type=text]:focus {
  border-bottom: 1px solid #c9252f!important;
  box-shadow: 0 1px 0 0 #c9252f!important;
}

input.valid[type=text]:not(.browser-default) {
  border-bottom: 1px solid #f7ee8b!important;
  box-shadow: 0 1px 0 0 #f7ee8b!important;
}

input[type=text]:focus+label {
  color: #c9252f!important;
}

input[type=text].valid+label {
  color: #f7ee8b!important;
}

textarea.materialize-textarea:focus {
  border-bottom: 1px solid #c9252f!important;
  box-shadow: 0 1px 0 0 #c9252f!important;
}

textarea.materialize-textarea:focus {
  border-bottom: 1px solid #c9252f!important;
  box-shadow: 0 1px 0 0 #c9252f!important;
}

textarea.materialize-textarea:focus+label {
  color: #c9252f!important;
}
textarea.materialize-textarea.valid+label {
  color: #f7ee8b!important;
}

textarea.materialize-textarea.valid {
  border-bottom: 1px solid #f7ee8b!important;
  box-shadow: 0 1px 0 0 #f7ee8b!important;
}


.fa-user-circle{
  padding-top: 15px;
}

.discussion-title{
  color: white;
  font-family: 'Limelight', cursive;
}

.heading{
  color: white;
  font-family: 'Limelight', cursive;
  text-align: center;
  margin-bottom: 4%;
}

.current_discussion{
  height: auto;
  border: 1px solid rgba(255, 255, 255, 0.8); 
  margin-bottom: 2%;
  background-color: #d1d2d4;
}

.film-strip{
  height: 175px;
  overflow: auto;
  background-size: 100%;
  background-image: url(https://i.pinimg.com/originals/43/c4/20/43c420aa5c6754dcd561d1713db16cea.jpg);
  background-repeat: repeat-y;
}

.current_discussion{
  height: auto;
  border: 1px solid white; 
  margin-bottom: 2%;
}

.showing-text{
  color: #ebbb4a;
  font-family: 'Limelight', cursive; 
  z-index: 1000;
  text-shadow:
  1px 1px #212323,
  -1px 0 #cdd2d5,
  -1px 2px #657075,
  -2px 1px #cdd2d5,
  -2px 3px #657075,
  -3px 2px #cdd2d5,
  -3px 4px #657075,
  -4px 3px #cdd2d5,
  -4px 5px #657075,
  -5px 4px #cdd2d5,
  -5px 6px #657075,
  -6px 5px #cdd2d5,
  -6px 7px #657075,
  -7px 6px #cdd2d5,
  -7px 8px #657075,
  -8px 7px rgb(205, 210, 213);
  overflow: hidden; /* Ensures the content is not revealed until the animation */
  white-space: nowrap; /* Keeps the content on a single line */
  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
  letter-spacing: .2em; /* Adjust as needed */
  animation: 
    typing 3.5s steps(30, end),
    blinking-cursor .5s step-end infinite;
  }

.new_disc_btn{
  color: #ebbb4a;
  margin-top: 5%;
}

  /* The typing effect */
@keyframes typing {
  from { width: 0 }
  to { width: 100% }
}


.main-col{
background-color: #d1d2d4;
}

.disc-col{
  height: 175px;
  text-align: center;
  background-color: #d1d2d4;
}

.row{
  margin-bottom: 0;
}

#login-button{
  background-color: #ebbb4a;
  color: #c9252f;
}

.club-title{
  margin-top: 3%;
  font-family: 'Limelight', cursive ;
  font-size: 32px;
  text-align: center;
  color:#ebbb4a;
}

.club-description{
  text-align: center;
  color: #f7ee8b;
  margin-bottom: 1%;
}


.display_box{
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 3%;
  border: 5px dotted rgba(213, 126, 0, 1);
  }

li{
  padding-left: 5px !important;
  padding-right: 5px !important;
}

#logo-container{
  margin-left: 15%;
}

#navbar{
  margin-right: 3%;
}

#username-nav{
  margin-right: 4px;
}

.main-body{
  margin-top:3%;
  padding-bottom: 20px;
  padding-bottom: 80px;
}

.main {
  min-height: 100vh;
  position: relative;
}

.logged-in-nav{
  padding-left: 10px;
}

.footer-copyright{
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  text-align: center;
  width: 100%;
  height: 60px;
  padding-top: 20px;
  padding-bottom: 20px;
}

/* Hover disabled until we have it linked to user profile */
/* .single-post:hover{
  transform: translateY(-0.2em);
  box-shadow: 
    0.1em 0.1em 0.1em 0.1em #f7ee8b, 
    inset -2em -1em 5em 0.1em #f7ee8b;
} */

.cur_disc_row:hover {
  box-shadow: 
  0em 0em 0em 0em #ebbb4a, 
  0em 0em 5em 0.1em #ebbb4a;
}

.discussions_cards:hover{
  box-shadow: 
  0em 0em 0em 0em #ebbb4a, 
  0em 0em 5em 0.1em #ebbb4a;
  -webkit-transition: box-shadow 0.2s ease-in-out, border-color 0.2s ease-in;
  -moz-transition: box-shadow 0.2s ease-in-out, border-color 0.2s ease-in;
  -o-transition: box-shadow 0.2s ease-in-out, border-color 0.2s ease-in;
  -ms-transition: box-shadow 0.2s ease-in-out, border-color 0.2s ease-in;
  transition: box-shadow 0.2s ease-in-out, border-color 0.2s ease-in;
}

.showing-info{
  color: #d1d2d4;
  font-family: 'Montserrat', sans-serif;
}

.form_post{
  margin-top: 5%;
  margin-bottom:2%;
}

.waves-light{
  background-color: #c9252f;
}

.waves-light:hover{
  background-color: #cdd2d5;
  color: #c9252f;
}

.datepicker{
  color:white;
}

#add_movie_btn{
  margin-top: 3%;
}

/* To fix cut off dates from materialize datepicker */
.datepicker-controls .select-month input { width: 5em; }
.datepicker-date-display .date-text{ font-size: 2.2rem; }


/* Background Spotlights */
  /* Mobile Spotlights */
      @media screen and (max-width: 640px){
        .showing-text{
          font-size: 25px;
          letter-spacing: .1em; /* Adjust as needed */
        }

        /* lamp on right */
        .lamp {
          position: fixed;
          width: 80px;
          height: 2400px;
          background-image: radial-gradient(ellipse, rgba(82,116,168,0.5), rgba(82,116,168,0.2) 25%, rgba(82,116,168,0) 50%);
          right: -10vw;
          bottom: -80vh;
          transform: rotateX(30deg) perspective(23vh);
          animation: rotate_spotlight 25s linear infinite;
        transform-origin: center bottom;
        z-index: -1;
        }

        /* lamp on left */
        .lamp2 {
          position: fixed;
          width: 80px;
          height: 2400px;
          background-image: radial-gradient(ellipse, rgba(82,116,168,0.5), rgba(82,116,168,0.2) 25%, rgba(82,116,168,0) 50%);
          left: -10vw;
          bottom: -80vh;
          transform: rotateX(30deg) perspective(23vh);
          animation: rotate_spotlight2 25s linear infinite;
        transform-origin: center bottom;
        z-index: -1;
        }

        @keyframes rotate_spotlight {
          0% {
            transform: rotate(0deg);
          }
          50% {
            transform: rotate(-30deg);
          }
          100% {
            transform: rotate(0deg) 
          }
        }

        @keyframes rotate_spotlight2 {
          0% {
            transform: rotate(0deg) 
          }
          50% {
            transform: rotate(30deg);
          }
          100% {
            transform: rotate(0deg) 
          }
        }
      }
  

  @media screen and (min-width: 768px){
    .showing-text{
      font-size: 30px;
      letter-spacing: .15em; /* Adjust as needed */
    }
  }

  /* Desktop Spotlights */
  @media screen and (min-width: 980px){

    .showing-text{
      font-size: 40px;
      letter-spacing: .2em; /* Adjust as needed */
    }

    /* lamp on right */
    .lamp {
      position: fixed;
      width: 110px;
      height: 2400px;
      background-image: radial-gradient(ellipse, rgba(82,116,168,0.5), rgba(82,116,168,0.2) 25%, rgba(82,116,168,0) 50%);
      right: -10vw;
      bottom: -80vh;
      transform: rotateX(30deg) perspective(23vh);
      animation: rotate_spotlight 25s linear infinite;
    transform-origin: center bottom;
    z-index: -1;
    }

    /* lamp on left */
    .lamp2 {
      position: fixed;
      width: 110px;
      height: 2400px;
      background-image: radial-gradient(ellipse, rgba(82,116,168,0.5), rgba(82,116,168,0.2) 25%, rgba(82,116,168,0) 50%);
      left: -10vw;
      bottom: -80vh;
      transform: rotateX(30deg) perspective(23vh);
      animation: rotate_spotlight2 25s linear infinite;
    transform-origin: center bottom;
    z-index: -1;
    }

    @keyframes rotate_spotlight {
      0% {
        transform: rotate(0deg);
      }
      50% {
        transform: rotate(-45deg);
      }
      100% {
        transform: rotate(0deg) 
      }
    }

    @keyframes rotate_spotlight2 {
      0% {
        transform: rotate(0deg) 
      }
      50% {
        transform: rotate(45deg);
      }
      100% {
        transform: rotate(0deg) 
      }
    }
  }

.modal {
  text-align: center;
}

.modal .modal-footer {
  text-align: center;
}

.modal-content {
  font-size: 20px;
}

.sidenav {
  padding: 20px;
}

